        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=30969
        A no-prefix XPath node test should not match no-namespace elements in HTML document

        Test: fast/xpath/null-namespace-in-html.html

        * xml/XPathStep.cpp: (WebCore::XPath::nodeMatchesBasicTest): Special case non-HTML elements
        in HTML documents (as these are the ones that can have null namespace).



Canonical link: https://commits.webkit.org/41852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50419 268f45cc-cd09-0410-ab3c-d52691b4dbfc